2008-12-05  Vladimir Tzankov  <vtzankov@gmail.com>

	* error.d (end_error): abort on error in case the current thread
	is supposed to be suspended

2008-12-05  Sam Steingold  <sds@gnu.org>

	* check-lispfun.lisp (get-lisp-defs): also check for funcall(S())
	for subrs (which should be called using funcall(L()) instead)
	"make check-sources" is your friend!

2008-12-05  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (pin_varobject): objects of type gcv_object_t are
	verboten outside of GC

2008-12-05  Sam Steingold  <sds@gnu.org>

	* check-lispfun.lisp (*const-decls*): add "constobj_tl"

2008-12-05  Sam Steingold  <sds@gnu.org>

	remove USER_HOMEDIR - assume that all supported platforms have it
	* pathname.d (USER-HOMEDIR-PATHNAME): define unconditionally
	* constobj.d (user_homedir): ditto
	* constsym.d, subr.d (user_homedir_pathname): ditto
	* lispbibl.d (USER_HOMEDIR): remove define
	* spvw.d (main_actions): use L(user_homedir_pathname) in funcall

2008-12-05  Sam Steingold  <sds@gnu.org>

	* zthread.d (MAKE-THREAD, CALL-WITH-TIMEOUT): simplify (GENSYM) funcall
	(THREAD-KILL): use L(thread_interrupt) instead of S() in funcall
	* spvw_circ.d (ht_add): use L(puthash) instead of S() in funcall
	* spvw.d (main_actions): simplify (GENSYM) funcall

2008-12-04  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (remove_timeout_call): remove only the requested timeout
	call

2008-12-04  Vladimir Tzankov  <vtzankov@gmail.com>

	no PENDING_INTERRUPTS when MULTITHREAD (fixes also CALL-WITH-TIMEOUT)
	* lispbibl.d (PENDING_INTERRUPTS): do not define it when MULTITHREAD.
	it is not needed and also fixes problem with CALL-WITH-TIMEOUT when
	error is signalled (ualarm()/SIGALRM is called in error.d)
	(clisp_thread_t): remove _interrupt_pending
	* zthread.d (CALL-WITH-TIMEOUT): simplify code

2008-12-04  Vladimir Tzankov  <vtzankov@gmail.com>

	* stream.d (remove_from_open_streams): add function. removes stream
	from O(open_files). use open_files_lock when MULTITHREAD